# presto-modal

./: pyproject.toml
config/: mistral-instruct.yml  mistral-memorize.yml  mixtral.yml
data/: apply_template_train_10_sharegpt.jsonl  apply_template_train_200_openai.jsonl  apply_template_train_200_sharegpt.jsonl
src/: convert_dataset.py  inference.py  train.py
