[tool.poetry]
name = "presto-modal"
version = "0.1.0"
description = ""
authors = ["David Mack <davidhughhenrymack@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
modal = "^0.64.10"
pyyaml = "^6.0.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
